fixed horizontal overflows

--- a/assets/site.css
+++ b/assets/site.css
@@ -183,6 +183,11 @@ Single-colored icons can be modified like so:
   border: 1px solid #ddd;
   background-color: #f8f8f8;
   border-radius: 3px;
+  word-break: break-all;
+}
+
+pre > code, .katex-display, figure {
+  overflow: scroll;
 }
 
 /* let print do its own thing */
